# MinePlay

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/mineplay/agent/: MainActivity.kt
android/app/src/main/java/dev/mineplay/agent/accessibility/: TouchFallbackService.kt
android/app/src/main/java/dev/mineplay/agent/projection/: ProjectionService.kt
android/app/src/main/java/dev/mineplay/agent/session/: SessionController.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
config/: mineplay.toml
crates/mineplay-android-shell/: Cargo.toml
crates/mineplay-android-shell/src/: lib.rs
crates/mineplay-config/: Cargo.toml
crates/mineplay-config/src/: lib.rs
crates/mineplay-core/: Cargo.toml
crates/mineplay-core/src/: lib.rs
crates/mineplay-desktop/: Cargo.toml
crates/mineplay-desktop/src/: adaptive.rs  cli.rs  host_display.rs  main.rs  perf.rs
crates/mineplay-protocol/: Cargo.toml
crates/mineplay-protocol/src/: lib.rs
crates/mineplay-scrcpy/: Cargo.toml
crates/mineplay-scrcpy/src/: lib.rs
docs/: commands.md  module-layout.md  performance.md  setup.md  start-playing.md  troubleshooting.md
docs/impl/: implementation_plan_0.md  implementation_plan_1.md  implementation_plan_2.md  implementation_plan_3.md  implementation_plan_4.md
profiles/: bedrock.toml
scripts/: bootstrap-tools.ps1  build-android.ps1  capture-perfetto.ps1  pair-device.ps1  play.ps1
