[workspace]
members = [
    "crates/mineplay-android-shell",
    "crates/mineplay-config",
    "crates/mineplay-core",
    "crates/mineplay-desktop",
    "crates/mineplay-protocol", "crates/mineplay-scrcpy",
]
default-members = ["crates/mineplay-desktop"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.91"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
bincode = "1.3.3"
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.50.0", features = ["macros", "process", "rt-multi-thread", "sync"] }
toml = "1.1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }
