[package]
name = "mineplay-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mineplay-config = { path = "../mineplay-config" }
mineplay-protocol = { path = "../mineplay-protocol" }
serde.workspace = true
thiserror.workspace = true
