[package]
name = "mineplay-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
mineplay-android-shell = { path = "../mineplay-android-shell" }
mineplay-config = { path = "../mineplay-config" }
mineplay-core = { path = "../mineplay-core" }
mineplay-protocol = { path = "../mineplay-protocol" }
mineplay-scrcpy = { path = "../mineplay-scrcpy" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
windows-sys.workspace = true
